--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,11 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "bailangzhan/yii2-webuploader": "^1.1"
+        "bailangzhan/yii2-webuploader": "^1.1",
+        "codewen2018/yii2-qiniu": "^1.0",
+        "flyok666/yii2-qiniu": "^1.0",
+        "kucha/ueditor": "*"
+
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
