--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "bailangzhan/yii2-webuploader": "^1.1",
         "codewen2018/yii2-qiniu": "^1.0",
         "flyok666/yii2-qiniu": "^1.0",
-        "kucha/ueditor": "*"
+        "kucha/ueditor": "*",
+        "creocoder/yii2-nested-sets": "^0.9.0",
+        "liyuze/yii2-ztree": "^1.0"
 
     },
     "require-dev": {
