--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "flyok666/yii2-qiniu": "^1.0",
         "kucha/ueditor": "*",
         "creocoder/yii2-nested-sets": "^0.9.0",
-        "liyuze/yii2-ztree": "^1.0"
+        "liyuze/yii2-ztree": "^1.0",
+        "dmstr/yii2-adminlte-asset": "^2.6"
 
     },
     "require-dev": {
