--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "kucha/ueditor": "*",
         "creocoder/yii2-nested-sets": "^0.9.0",
         "liyuze/yii2-ztree": "^1.0",
-        "dmstr/yii2-adminlte-asset": "^2.6"
+        "dmstr/yii2-adminlte-asset": "^2.6",
+        "mdmsoft/yii2-admin": "~2.0"
 
     },
     "require-dev": {
